# DIPS

./: .gitignore  wpa_supplicant.conf
mhk_exam/: .gitignore  theme_style.sty
mhk_exam/q1_synchronization/: main.tex  references.bib
mhk_exam/q2_leader_election_consistency/: main.tex  references.bib
mhk_exam/q3_fault_tolerance_consensus/: main.tex  references.bib
mhk_exam/q4_positioning_location_awareness/: main.tex  references.bib
mhk_exam/q5_pervasive_computing/: main.tex  references.bib
mhk_exam/q6_context_awareness/: main.tex  references.bib
mhk_exam/template/: main.tex  theme_style.sty
prj1/: bully_election.py  bully_election_classes.py  improved_bully_election.py  unit_test_bully.py
prj2/: Deployment_diagram.vsdx  MQTT_topics.txt
prj2/alexa/: app.py  mqtt_callback_client.py  requirements.txt
prj2/audio/: app.py  requirements.txt
prj2/context_model/: context_model.md
prj2/emotion_detection/: emotion_detection.py  notes.md  requirements.txt
prj2/led/: led.py
prj2/mood_detection/: example.py
prj2/rich_image/: rich_image.drawio  ~$rich_image.drawio.bkp
prj2/server/: configuration.yaml  contexts.py  led.py  led_script.py  pi_server.py  requirements.txt  topics.py
prj2/speakers/: Alexa_test.py  bluetoothctl.py  (+2 more)
w1/: ex1.md  ex2.md  ex3.md  ex4.md
w2/: E1.md  E2.md  E3.md
w2/E1/: CMakeLists.txt  main.cpp
w2/E2/: main.cpp  (+1 more)
w3/: LederElection.md  README.md  bully-election.py  hirschberg-sinclair.py  requirements.txt
w5/: consensus_fault_tolerance.md  raft.md
w6/: ex3.ipynb  rssi_data_generator.py
w8/: mqtt_pub.py  mqtt_sub.py
(+13 files in other folders)
